# ict-compiler

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  debug.scl  sandbox.scl  todo.txt
doc/: hungarian.md  idea.txt  todo.compressed.md  todo.md
ict/analyses/below/: CMakeLists.txt  README.md  ifc.cpp  mod.cpp
ict/analyses/below/inc/ict/analyses/: below.hpp
ict/analyses/crossblock/: CMakeLists.txt  README.md  ifc.cpp  mod.cpp
ict/analyses/crossblock/inc/ict/analyses/: crossblock.hpp
ict/analyses/numbering/: CMakeLists.txt  mod.cpp
ict/analyses/numbering/inc/ict/analyses/: numbering.hpp
ict/analyses/preds/inc/ict/analyses/: preds.hpp
ict/arch/ivm/: README.md
ict/arch/ivm/backend/: CMakeLists.txt  how.md
ict/arch/ivm/backend/inc/ict/arch/: ivm.hpp
ict/arch/ivm/backend/src/: mod.cpp
ict/arch/ivm/basic-stackplan/: CMakeLists.txt  mod.cpp
ict/arch/ivm/hl2ll/: CMakeLists.txt  mod.cpp
ict/arch/ivm/passes/reorder/: CMakeLists.txt  mod.cpp
ict/arch/ivm/passes/sfops/: mod.cpp
ict/core/: CMakeLists.txt
ict/core/demos/: ivm.cpp  playground.cpp
ict/core/inc/ict/: ir-macro.hpp  ir.hpp  mod.hpp  refs.hpp
ict/core/src/: ir.cpp  ir.verify.cpp  main.cpp  mod.cpp
ict/examples/: add-call.ict  add.ict  alloca.ict  blob.ict  br.ict  call-arg.ict  call-ret.ict  crossblock.ict  fib-recursive.ict  if.ict  int2ints.ict  loop.ict  tags.ict
ict/examples/flow/: crossblock.ict  if.ict  loop.ict
ict/examples/funcs/: add.ict  call-with-arg.ict  call-with-ret.ict
ict/examples/globals/: blob.ict  decl.ict  globalptr.ict  var.ict
ict/examples/memory/: alloca-dyn.ict  alloca.ict  giveptr.ict
ict/examples/progs/: fib-recursive.ict
ict/examples/simple/: add.ict
ict/examples/types/: struct.ict
ict/ir/: CMakeLists.txt  mod.cpp
ict/passes/dehumanify/: CMakeLists.txt  README.md  mod.cpp
ivm/: .gitignore  README.md  iasm  ivm  link.s  log.txt  printer.s  run.sh  test.s
ivm/asm/: init.s  ivm.s  printer.s  sanitize.s
ivm/asm/font/: cvt.py  font.s  renderer.s
ivm/ief/inc/ief/: core.h  gnom.h  reloc.h
ivm/ilf/inc/: ilf.h
ivm/inc/: string.scl
ivm/inc/ivm/: crt.scl  intrin.scl  irq.scl  modem.scl  printer.scl
ivm/lib-src/std/: mem.scl
ivm/lib/ivm/: devices.sch  interrupts.sch  intrin.sch
ivm/lib/ivm/details/: intrinsics.ict
ivm/lib/std/: mem.sch  string.sch  types.sch
ivm/std/asm/: irq.s  ivm.s  sanitize.s
ivm/std/asm/font/: font.s
ivm/std/inc/: string.scl
ivm/std/inc/ivm/: intrin.scl  modem.scl
misclib/: CMakeLists.txt  readme.txt
misclib/demos/: ast.cpp  dstream.cpp  parse.cpp  shortvec.cpp
misclib/inc/misclib/: ansi.hpp  array_view.hpp  defs.hpp  dump_stream.hpp  parse.hpp  shortvec.hpp  traits.hpp  tree.hpp  variant.hpp
misclib/src/: misc.cpp  parse.cpp
modlib/: CMakeLists.txt
modlib/inc/: modlib_manager.hpp  modlib_mod.hpp
modlib/src/: modlib_manager.cpp
prog/: aplusb.scl  helloworld.scl  interrupt.scl
prog/lib/: bmsg.scl  char64.scl  inter.scl  intrin.scl  modem.scl  printer.scl
scl/: CMakeLists.txt
scl/examples/: add.scl  call.scl  fib-rec.scl  if.scl  ptr.scl  sandbox.scl  str.scl  while.scl
scl/examples/bardak-client/: README.md  char64.scl  client.scl  logic.scl  main.scl  mapper.scl  misc.scl  tracker.scl  viz.scl
scl/examples/tests/: every-op.scl  every-type.scl
scl/inc/scl/: irgen.hpp  parsing.hpp  passes.hpp  scope.hpp
scl/inc/scl/ast/: basic.hpp  block.hpp  expr.hpp  module.hpp  type.hpp
scl/src/: irgen.cpp  mod.cpp
scl/src/ast/: basic.cpp  block.cpp  expr.cpp  module.cpp  type.cpp
scl/src/parser/: block.cpp  expr.cpp  module.cpp  type.cpp
scl/src/pass/: scopes.cpp  types.cpp
